@@ -1,3 +1,8 @@
+2007-10-19  Örjan Ekeberg  <orjan@nada.kth.se>
+
+	* wavegenerator.cc, waveconsumer.cc, application1.cc: Replace C
+	MPI calls with their C++ equivalents.
+
 2007-10-19  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* wavegenerator.cc (main): Renamed array_data, linear_index from
